# vigil

./: .gitignore  README.md  pyproject.toml
.claude/skills/vigil-capability-statement/: SKILL.md
.claude/skills/vigil-competitive-tracker/: SKILL.md
.claude/skills/vigil-intelligence-briefing/: SKILL.md
.claude/skills/vigil-intelligence-briefing/references/: vectis-strategic-context.md
.claude/skills/vigil-opportunity-scorer/: SKILL.md
.claude/skills/vigil-signal-dashboard/: SKILL.md
.claude/skills/vigil-store-crossref/: SKILL.md
.claude/skills/vigil-store-crossref/references/: store-app-roadmap.md
artifacts/: community-cluster-dashboard.jsx
config/: watchlists.json
data/: .gitkeep
design-docs/: intel_store.py  procurement-scanner-plan.md
docs/: ARCHITECTURE.md  USER_GUIDE.md
src/vectis_intel/: __init__.py  __main__.py  config.py  server.py
src/vectis_intel/agents/: __init__.py  procurement.py
src/vectis_intel/clients/: __init__.py  sam_gov.py  usaspending.py
src/vectis_intel/community/: __init__.py  classify.py  config.py  digest.py  promote.py  schema.py  score.py  sync_taxonomy.py  taxonomy.yaml
src/vectis_intel/store/: __init__.py  db.py  evidence.py  facade.py  integrity.py  models.py  repos.py
src/vectis_intel/tools/: __init__.py  intel_tools.py  procurement_tools.py
tests/: __init__.py  test_community_classify.py  test_community_ingest.py  test_community_promote.py  test_community_score.py  test_config.py  test_integration.py  test_sam_client.py  test_server.py  test_signal_extraction.py  test_store.py  test_usaspending_client.py
(+6 files in other folders)
